1998-06-03  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* amplot/amplot.sh.in: modified command line argument parsing
 	mechanism, so as to prevent shell quoting problems and unportable
 	constructs.
	Reported by Chris Jones <cjones@clydesdale.math.montana.edu>

1998-06-02  John R. Jackson  <jrj@purdue.edu>

	* server-src/amcheck.c (main), server-src/reporter.c (main): make
	sure internal errors, such as the mail command failing, get
	reported.  In the case of amcheck, they go to stderr even if -m is
	set since there didn't seem to be anyplace better to do so and if
	this is running from a cron job it might get back to a real user.
	For reporter, the errors go to .../amdump along with everything
	else from the amdump script, and they should also go to .../log,
	except since it's reporter that's having the trouble, they probably
	will not make it into the mail report.

1998-06-01  John R. Jackson  <jrj@purdue.edu>

	* client-src/killpgrp.c: clean up minor compiler warnings by not
	building term_kill_{soft,hard} unless they are needed.

	* server-src/driverio.c (dumper_cmd): clean up compiler warning
	in printf format by forcing argument to always be long and using %ld.

	* server-src/driver.c: include <holding.h> to get declaration for
	unlink_holding_files and avoid a compiler warning.

	* common-src/amanda.h, common-src/match.c (validate_glob, match_glob,
	glob_to_regex), recover-src/amrecover.h, recover-src/extract_list.c
	(add_glob, add_regex, add_file, delete_glob, delete_regex,
	delete_file), recover-src/help.c (help_list), recover-src/uparse.y,
	recover-src/uscan.l, man/amrecover.8.in: add shell wildcard support
	for the add/delete amrecover commands.  Add addx/deletex commands
	that use regular expressions.  Support more characters in path names.

1998-06-01  Dan Swartzendruber  <dswartz@druber.com> via John R. Jackson

	* server-src/amlabel.c (main): check argc before referencing too
	far into argv for "-f".
